# Zephyr

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: Ci.yaml
Zephyr/: CMakeLists.txt
Zephyr/include/Zephyr/Core/: ByteReader.hpp
Zephyr/src/Core/: ByteReader.cpp
